// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BagSearch loader Basic functions module result 1`] = `
Array [
  Array [
    Object {
      "_adressableObjectId": "0363010000578090",
      "houseNumber": 30,
      "houseNumberFull": "30",
      "houseNumberLetter": null,
      "houseNumberSuffix": null,
      "postalCode": "1043AP",
      "residence": "Amsterdam",
      "streetName": "Basisweg",
      "type": "BUILDING",
    },
  ],
]
`;

exports[`BagSearch loader Basic functions module result 2`] = `
Array [
  Array [
    Object {
      "_adressableObjectId": "0363010012062064",
      "houseNumber": 19,
      "houseNumberFull": "19 C",
      "houseNumberLetter": "C",
      "houseNumberSuffix": null,
      "postalCode": "1055XD",
      "residence": "Amsterdam",
      "streetName": "Louise de Colignystraat",
      "type": "BUILDING",
    },
  ],
]
`;

exports[`BagSearch loader findAddress 1`] = `
Array [
  Object {
    "_adressableObjectId": "0363010000578090",
    "houseNumber": 30,
    "houseNumberFull": "30",
    "houseNumberLetter": null,
    "houseNumberSuffix": null,
    "postalCode": "1043AP",
    "residence": "Amsterdam",
    "streetName": "Basisweg",
    "type": "BUILDING",
  },
]
`;

exports[`BagSearch loader findAddress 2`] = `
Array [
  Array [
    Object {
      "_adressableObjectId": "0363010012062064",
      "houseNumber": 19,
      "houseNumberFull": "19 C",
      "houseNumberLetter": "C",
      "houseNumberSuffix": null,
      "postalCode": "1055XD",
      "residence": "Amsterdam",
      "streetName": "Louise de Colignystraat",
      "type": "BUILDING",
    },
  ],
]
`;

exports[`BagSearch loader findAddress 3`] = `
Array [
  Object {
    "_adressableObjectId": "0363010000578090",
    "houseNumber": 30,
    "houseNumberFull": "30",
    "houseNumberLetter": null,
    "houseNumberSuffix": null,
    "postalCode": "1043AP",
    "residence": "Amsterdam",
    "streetName": "Basisweg",
    "type": "BUILDING",
  },
]
`;

exports[`BagSearch loader reducer 1`] = `
Object {
  "_adressableObjectId": "0363010000578090",
  "houseNumber": 30,
  "houseNumberFull": "30",
  "houseNumberLetter": null,
  "houseNumberSuffix": null,
  "postalCode": "1043AP",
  "residence": "Amsterdam",
  "streetName": "Basisweg",
  "type": "BUILDING",
}
`;
